--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>Dosen Pembimbing : Marlinda Saputri, SE, MM Dan Nurul Sukriani, SE., M.Si </p> 
       <div class="row mt-2 ">
             <div class="col-md-4">
-                 <img src="./assets/img/ab2.png" alt="Our Cafe" class=" animate__animated animate__delay-2s animate__bounce animate__infinite animate__slow img-fluid mt-3" width="400">
+                 <img src="ab.png" alt="Our Cafe" class=" animate__animated animate__delay-2s animate__bounce animate__infinite animate__slow img-fluid mt-3" width="400">
             </div>
             <div class="col-md-4">
                  <img src="./assets/img/aa.jpg" alt="Our Cafe" class=" animate__animated animate__delay-2s animate__bounce animate__infinite animate__slower img-fluid mt-3" width="400">
